syntax = "proto3";

package envoy.extensions.filters.http.timing_stats.v3;

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.http.timing_stats.v3";
option java_outer_classname = "TimingStatsProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/filters/http/timing_stats/v3;timing_statsv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Timing_stats]
// [#extension: envoy.filters.http.timing_stats]

message Config {
  enum TimePoint {
    FirstDownstreamRxByteReceived = 0;
    // TODO: add the rest
  }

  enum TimeUnit {
    Milliseconds = 0;
    Microseconds = 1;
    Nanoseconds = 2;
  }

  message Duration {
    string stat_name = 1 [(validate.rules).string = {min_len: 1}];
    TimePoint begin = 2 [(validate.rules).enum = {defined_only: true}];
    TimePoint end = 3 [(validate.rules).enum = {defined_only: true}];
    TimeUnit units = 4 [(validate.rules).enum = {defined_only: true}];
  }

  repeated Duration durations = 1;
  string stat_prefix = 2;
}
